--- a/simpleStorage.html
+++ b/simpleStorage.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-<h3>Simple Storage dApp 예제</h3>
+<h3>Simple Storage dApp 예제 gg</h3>
 <ul>
   <li>컨트랙트 주소: <span id="contractAddr"></span></li>
   <li>내 어카운트 주소: <span id="accountAddr"></span></li>
