--- a/simpleStorage.html
+++ b/simpleStorage.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-<h3>Simple Storage dApp abcd</h3>
+<h3>Simple Storage dApp </h3>
 <ul>
   <li>컨트랙트 주소: <span id="contractAddr"></span></li>
   <li>내 어카운트 주소: <span id="accountAddr"></span></li>
@@ -25,20 +25,22 @@
 </ul>
 
 컨트랙트 소스
-<script src="https://gist.github.com/atomrigs/7c633570496b79623bed5d1286f93f3a.js"></script>
-
+<!-- <script src="https://gist.github.com/atomrigs/7c633570496b79623bed5d1286f93f3a.js"></script> -->
+<script src="https://gist.github.com/linuxkiller/6ea0fbd8f3d455dd982fe6fd743ded90.js"></script>
 HTML 소스<br>
-<a href="https://github.com/atomrigs/atomrigs.github.io/blob/master/simplestorage.html">https://github.com/atomrigs/atomrigs.github.io/blob/master/simplestorage.html</a>;
+<!-- <a href="https://github.com/atomrigs/atomrigs.github.io/blob/master/simplestorage.html">https://github.com/atomrigs/atomrigs.github.io/blob/master/simplestorage.html</a>; -->
+<a href="https://github.com/linuxkiller/linuxkiller.github.io/blob/master/simpleStorage.html">https://github.com/linuxkiller/linuxkiller.github.io/blob/master/simpleStorage.html</a>;
+
 <br><br>
 <p>
-<a href="http://www.chaintalk.io/archive/lecture?sca=%EB%82%98%EB%8F%84+dApp+%EA%B0%9C%EB%B0%9C"><i>나도 dApp 개발해 보자 시리즈 by Atomrigs © 2017</i></a>
+<a href="http://www.chaintalk.io/archive/lecture?sca=%EB%82%98%EB%8F%84+dApp+%EA%B0%9C%EB%B0%9C"><i>나도 DApp 개발해 보자 시리즈 by Atomrigs © 2017</i></a>
 </p>
 
 </body>
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 <!-- script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script -->
 <script>
-var contractAddress = '0xc5244053ecA508a11951400fc7Af28738Fd0ce77';
+var contractAddress = '0x085009df6aa7ffaf73d0c7974214c87c4da2f901';
 var abi = [{"constant":false,"inputs":[{"name":"x","type":"uint256"}],"name":"set","outputs":[],"payable":false,"type":"function"},{"constant":true,"inputs":[],"name":"get","outputs":[{"name":"","type":"uint256"}],"payable":false,"type":"function"}];
 var simpleStorageContract;
 var simpleStorage;
