--- a/simpleStorage.html
+++ b/simpleStorage.html
@@ -40,7 +40,8 @@ HTML 소스<br>
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
 <!-- script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script -->
 <script>
-var contractAddress = '0x085009df6aa7ffaf73d0c7974214c87c4da2f901';
+//var contractAddress = '0x085009df6aa7ffaf73d0c7974214c87c4da2f901';
+var contractAddress = '0xc5c61f744c49afb84cb87df53e3c74a42af7f39a';
 var abi = [{"constant":false,"inputs":[{"name":"x","type":"uint256"}],"name":"set","outputs":[],"payable":false,"type":"function"},{"constant":true,"inputs":[],"name":"get","outputs":[{"name":"","type":"uint256"}],"payable":false,"type":"function"}];
 var simpleStorageContract;
 var simpleStorage;
@@ -76,7 +77,7 @@ function getLink(addr) {
 }
 
 function getValue() {
-  simpleStorage.get(function(e,r){
+  simpleStorage.get(function(e,r){ // 비동기 호출
     document.getElementById('storedData').innerHTML=r.toNumber();
 
   });
