--- a/simpleStorage.html
+++ b/simpleStorage.html
@@ -38,7 +38,7 @@ HTML 소스<br>
 
 </body>
 <script src="https://cdn.rawgit.com/ethereum/web3.js/develop/dist/web3.js"></script>
-<!-- script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script -->
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
 <script>
 //var contractAddress = '0x085009df6aa7ffaf73d0c7974214c87c4da2f901';
 var contractAddress = '0xc5c61f744c49afb84cb87df53e3c74a42af7f39a';
